--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,6 +6,7 @@
 
 body {
     font-family: Work Sans, sans-serif;
+    background-color: #FCFAF8;
 }
 
 .rifacebook-fill-icon {
@@ -739,7 +740,7 @@ body {
     color: #adaaa5;
     text-align: left;
     display: inline-block;
-    font-family: 'Work Sans';
+    font-family: Work Sans, sans-serif;
 }
 
 
@@ -753,7 +754,7 @@ body {
     gap: 24px;
     font-size: 18px;
     color: #666562;
-    font-family: Inter;
+    font-family: Work Sans, sans-serif;
 }
 
 .home-sec-2 {
@@ -765,7 +766,7 @@ body {
     gap: 24px;
     font-size: 18px;
     color: #666562;
-    font-family: Inter;
+    font-family: Work Sans, sans-serif;
 }
 
 .we-are-more-than-just-a-breast-parent {
@@ -925,44 +926,98 @@ body {
 }
 
 .ellipse-div {
+    position: relative;
     width: 100%;
-    clip-path: ellipse(50%);
-    border-radius: 10% 10%  0 0 ;
-    background: linear-gradient(180deg, #23b4e9, #fcfaf8);
-    height: 900px;
-    }
+    height: 1300px;
+    background: url('../../public/images/ellipse.png') no-repeat center center;
+    background-size: cover;
+}
 
-    .help-us-or {
+.ellipse-div2{
+    position: relative;
+    width: 100%;
+    height: 850px;
+    background: url('../../public/images/ellipse2.png') no-repeat center center;
+    background-size: cover;
+}
 
-       
-        }
-        .get-in-touch {
-        align-self: stretch;
-        position: relative;
-        font-size: 32px;
-        
-        }
-        .help-us-or-let-us-help-you-parent {
-    
-        position: relative;
-        display: flex;
-       
-        flex-direction: column;
-        padding-top: 250px;
-        gap: 28px;
-        text-align: right;
-        font-size: 74px;
-        color: #fff;
-        font-weight: bold;
-        }
-        
+.help-us-or {}
 
+.get-in-touch {
+    align-self: stretch;
+    position: relative;
+    font-size: 32px;
 
-@media only screen and (max-width: 480px) {
+}
+
+.help-us-or-let-us-help-you-parent {
+
+    position: relative;
+    display: flex;
+
+    flex-direction: column;
+    padding-top: 250px;
+    gap: 28px;
+    text-align: right;
+    font-size: 74px;
+    color: #fff;
+    font-weight: bold;
+}
+
+.details-4 {
+    height: 100%;
+    flex: 1;
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    padding: 24px;
+    box-sizing: border-box;
+    text-align: left;
+    font-size: 14px !important;
+    color: #107ba2;
+    font-family: 'Work Sans';
+    border-radius: 16px;
+    background-color: #E7F2F6;
+}
+
+.start-today {
+    font-size: 14px;
+    font-family: Inter;
+    color: #107ba2;
+}
+
+.home-sec5{
+    display: flex;
+padding: 66px 0px;
+flex-direction: column;
+
+gap: 98px;
+}
+
+@media only screen and (max-width: 768px) {
     .sm-icon01-parent {
         top: 30%;
         left: 45%;
 
+    }
+    .help-us-or{
+        font-size:48px;
+    }
+
+    #scrollContainer {
+        max-width: 100vw;
+        -webkit-overflow-scrolling: touch;
+    }
+
+    .ellipse-div {
+        height: 2000px;
+    }
+
+    .ellipse-div2 {
+        height: 1200px;
     }
 
     .image-container {
