--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -691,8 +691,24 @@ body {
     font-family: 'Work Sans';
 }
 
+.text-light-2{
+    color: rgba(0, 0, 0, 0.50);
+
+text-align: center;
+font-size: 24px;
+font-style: normal;
+font-weight: 300;
+line-height: normal;
+}
 
 
+.sub-heading{
+color: #FEFEFD;
+font-size: 24px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
 
 
 .breastmilk-bank {
