--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -47,8 +47,8 @@ line-height: normal;
     position: absolute;
     position: fixed;
     top: 40%;
-    left: 47%;
-    width: 100%;
+    right: 3%;
+    width: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -1027,6 +1027,100 @@ gap: 98px;
     color: #E23E48;
 }
 
+.py-60 {
+    padding: 60px 0;
+  }
+  @media only screen and (max-width: 768px) {
+    .py-60 {
+      padding: 52px 0;
+    }
+  }
+  
+  h2 {
+    font-family: Roboto-Light;
+    font-size: 32px;
+    color: #000;
+    line-height: 1.25;
+    text-transform: uppercase;
+  }
+  @media only screen and (max-width: 768px) {
+    h2 {
+      font-size: 24px;
+    }
+  }
+  .text-control-1 h2 {
+    margin-bottom: 20px;
+  }
+  @media only screen and (max-width: 768px) {
+    
+  }
+  
+
+  .material-icons.drop {
+    padding: 10px;
+    font-size: 2rem;
+    color: #d40119;
+    transition: transform 0.5s ease-in-out;
+    pointer-events: auto; 
+  }
+  .answer {
+    font-size: 16px;
+    color: #5c5c5c;
+    
+    background-color: #fff;
+    overflow: hidden;
+  }
+  .accordion {
+    background-color: #fff;
+    color: #444;
+    cursor: pointer;
+    width: 100%;
+    margin-bottom: 12px;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+    border: 1px solid #DEDAD4;
+    border-radius: 12px;
+  }
+  .answer-wrapper{
+   
+  }
+  @media only screen and (max-width: 768px) {
+    .accordion {
+      margin-bottom: 16px;
+    }
+  }
+  .question-wrapper {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px 16px;
+    transition: background-color 0.25s ease-in-out;
+  }
+  .answer-wrapper {
+    display: none;
+  }
+  .icon-expend {
+    /*transform: rotate(270deg);  Use rotate instead of rotateX */
+    transition: transform 0.75s ease-in-out;
+  }
+  
+  
+  .container-faq {
+    width: 100%;
+  }
+  @media only screen and (min-width: 768px) {
+    .container-faq {
+      max-width: 100%;
+    }
+  }
+  @media only screen and (min-width: 992px) {
+    .container-faq {
+      max-width:100%;
+    }
+  }
+
 @media only screen and (max-width: 768px) {
     .sm-icon01-parent {
         top: 30%;
@@ -1035,6 +1129,20 @@ gap: 98px;
     }
     .help-us-or{
         font-size:48px;
+    }
+
+    .sm-icon01-parent {
+        position: absolute;
+        position: fixed;
+        top: 40%;
+        left: 40%;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 34px;
+        z-index: 999;
     }
 
     #scrollContainer {
