--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -192,7 +192,7 @@ line-height: normal;
     box-sizing: border-box;
     height: 54px;
     overflow: hidden;
-
+    font-family: "Inter", sans-serif;
     flex-direction: row;
     align-items: center;
     justify-content: center;
@@ -356,7 +356,7 @@ line-height: normal;
     padding: 6px;
     font-size: 14px;
     color: rgba(255, 255, 255, 0.75);
-    font-family: Inter;
+    font-family: "Inter", sans-serif;
 }
 
 .frame-parent {
@@ -435,7 +435,7 @@ line-height: normal;
     gap: 3px;
     font-size: 14px;
     color: #000;
-    font-family: Inter;
+    font-family: "Inter", sans-serif;
 }
 
 .frame-container {
@@ -492,7 +492,7 @@ line-height: normal;
     position: relative;
     font-size: 11px;
     font-weight: 300;
-    font-family: Inter;
+    font-family: "Inter", sans-serif;
 }
 
 .copy {
@@ -640,7 +640,7 @@ line-height: normal;
     gap: 19px;
     font-size: 11px;
     color: #107ba2;
-    font-family: Inter;
+    font-family: "Inter", sans-serif;
 }
 
 .paragraph {
@@ -958,7 +958,7 @@ line-height: normal;
     background-color: #c4df16;
 
     color: rgba(0, 0, 0, 0.75);
-    font-family: Inter;
+    font-family: "Inter", sans-serif;
     border: none;
     border-radius: 16px;
 }
@@ -1023,7 +1023,7 @@ line-height: normal;
 
 .start-today {
     font-size: 14px;
-    font-family: Inter;
+    font-family: "Inter", sans-serif;
     color: #107ba2;
 }
 
